Fixes an issue with dark mode rendering the error panel with a light background color.

--- a/src/app/pages/playground/panels/mini-panel/mini-panel.component.scss
+++ b/src/app/pages/playground/panels/mini-panel/mini-panel.component.scss
@@ -13,7 +13,7 @@
     padding: 0 .5rem;
 
     span, .title {
-      opacity: .4;
+      opacity: .7;
     }
 
     span {
