--- a/src/app/pages/playground/playground.component.scss
+++ b/src/app/pages/playground/playground.component.scss
@@ -79,10 +79,6 @@
               color: white;
             }
           }
-
-          pre {
-            background-color: #fff8f8;
-          }
         }
       }
     }
